--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Ecommerce
+server.port=8081
 #spring.security.user.name=neeraj
 #spring.security.user.password=rathore
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
@@ -10,3 +11,6 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
+
+jwt.secret=MySecretKey
+jwt.expiration=3600000
